--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
+  box-sizing: border-box;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   color: #333;
 }
