--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,12 @@
   background-color: #ffffff;
   color: #333;
 }
+
+.head h1 {
+  background-color: lightblue;
+  color: black;
+  width: 100%;
+  margin: 0 0 20px 0;
+  font-size: 28px;
+  padding: 8px 16px;
+}
