--- a/src/components/Field/field.css
+++ b/src/components/Field/field.css
@@ -1,3 +1,16 @@
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px 5px;
+}
+
+.field-label {
+  padding-left: 8px;
+  margin-bottom: 6px;
+  font-size: 18px;
+}
+
 .field-input {
   width: 100%;
   padding: 8px;
@@ -8,4 +21,18 @@
 .field-input input {
   background-color: lightblue;
   border: 3px solid lightgrey;
+  width: 300px;
+  height: 22px;
+  margin: 0;
+  display: block;
+}
+
+.field-input select {
+  background-color: lightblue;
+  border: 3px solid lightgrey;
+  width: 300px;
+  height: 28px;
+  margin: 0;
+  padding: 2px;
+  display: block;
 }
