--- a/src/components/saveButton/saveButton.css
+++ b/src/components/saveButton/saveButton.css
@@ -1,7 +1,7 @@
 .save-button {
-  background-color: lightgrey;
+  background-color: #1e3a8a;
+  color: white;
   border: 1px solid black;
-  color: black;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
