--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,14 @@
   background-color: lightblue;
   color: black;
   width: 100%;
-  margin: 0 0 20px 0;
+  box-sizing: border-box;
+  margin: 0 auto 30px;
   font-size: 44px;
   padding: 8px 16px;
 }
 
 h2 {
-  font-size: 28px;
+  font-size: 34px;
 }
 
 .view-employees-link {
