--- a/src/components/CreateEmployeePage/CreationPopUp/CreationPopUp.css
+++ b/src/components/CreateEmployeePage/CreationPopUp/CreationPopUp.css
@@ -1,5 +1,5 @@
 /* Overlay */
-.cp-overlay {
+.modal-overlay {
   position: fixed;
   inset: 0;
   display: flex;
@@ -10,7 +10,7 @@
 }
 
 /* Modal box */
-.cp-modal {
+.modal {
   position: relative;
   background: #ffffff;
   border-radius: 20px;
@@ -22,7 +22,7 @@
   text-align: center;
 }
 
-.cp-content p {
+.modal-content p {
   margin: 0;
   font-size: 1.25rem;
   font-weight: 600;
@@ -30,7 +30,7 @@
 }
 
 /* Close button: circle with white cross */
-.cp-close {
+.modal-close {
   position: absolute;
   top: -14px;
   right: -14px;
@@ -46,21 +46,21 @@
   cursor: pointer;
 }
 
-.cp-close:focus {
+.modal-close:focus {
   outline: 2px solid rgba(0, 0, 0, 0.15);
 }
 
-.cp-close-icon {
+.modal-close-icon {
   color: #ffffff;
   font-size: 20px;
   line-height: 1;
 }
 
 @media (max-width: 420px) {
-  .cp-modal {
+  .modal {
     padding: 1.5rem 1.25rem;
   }
-  .cp-close {
+  .modal-close {
     width: 32px;
     height: 32px;
     top: -12px;
